test/test_suite/errors/discard_in_cond_valid.c3t
module main;

fn int? may_fault() @maydiscard => 2;

fn void main()
{
    if (may_fault(), true);
}